Changes for LRA tck failure on JDK11