@@ -263,6 +263,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
+              <argLine>${server.jvm.args}</argLine>
               <skipITs>false</skipITs>
               <reportsDirectory>${project.build.directory}/failsafe-reports-arq</reportsDirectory>
               <summaryFile>${project.build.directory}/failsafe-reports-arq/failsafe-summary.xml</summaryFile>
@@ -406,6 +407,19 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+    <profile>
+      <id>jdk11+</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <properties>
+        <jvm.args.modular>--add-modules=java.se
+          --add-opens=java.base/java.util=ALL-UNNAMED
+          --add-opens=java.base/java.util.reflect=ALL-UNNAMED
+          --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvm.args.modular>
+      </properties>
     </profile>
   </profiles>
 </project>
